--- a/src/components/OpenLayers/Home.css
+++ b/src/components/OpenLayers/Home.css
@@ -1,21 +1,30 @@
-.sidebar {
-    width: 100px;
-    position: absolute;
-    color: white;
-    left: 0;
-    top: 50px;
-    bottom: 0;
-    z-index: 1000;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
-.app-container {
+.main-container {
     display: flex;
+    flex-direction: column;
     height: 100vh;
 }
 
-.map-container {
-    width: 100%;
+.header {
+    height: 50px;
+    /* Your header height */
+    /* Other styling */
 }
+
+.map-container {
+    flex: 1;
+    position: relative;
+    .ol-map {
+        width: 100%;
+        height: 100%;
+    }
+}
+
 
 .map-container:-webkit-full-screen {
     height: 100%;
@@ -29,6 +38,15 @@
     height: 100%;
 }
 
+.sidebar {
+    width: 100px;
+    position: absolute;
+    color: white;
+    left: 0;
+    top: 50px;
+    bottom: 0;
+    z-index: 1000;
+}
 
 
 .search-bar {
@@ -47,5 +65,5 @@
     width: 400px;
     padding-bottom: 10%;
 
-    
+
 }
