--- a/src/components/OpenLayers/Maps/Map.css
+++ b/src/components/OpenLayers/Maps/Map.css
@@ -1,7 +1,4 @@
-.ol-map {
-  flex-grow: 1;
-  height: 100vh;
-}
+
 
 .ol-map:-webkit-full-screen {
     height: 100%;
